@@ -1,4 +1,4 @@
-use PathTools:ver<0.2.0+>:auth<github:ugexe>;
+use File::Directory::Tree:ver<0.2+>:auth<zef:raku-community-modules>;
 use JSON::Fast:ver<0.19+>:auth<cpan:TIMOTIMO>;
 
 unit class Build;
@@ -30,14 +30,14 @@ method build($cwd --> Bool) {
     }
 
     my $json = to-json(%libraries, :pretty, :sorted-keys);
-    "resources/libraries.json".IO.spurt: $json;
+    $*PROGRAM.child("resources/libraries.json").spurt: $json;
 
     # DO NOT COPY THIS SOLUTION
     # Delete precomp files when building in case the openssl libs have since been updated
     # (ideally this type of stale precomp would get picked up by raku)
     # see: https://github.com/sergot/openssl/issues/82#issuecomment-864523511
-    try rm($cwd.IO.child('.precomp').absolute, :r, :f, :d);
-    try rm($cwd.IO.child('lib/.precomp').absolute, :r, :f, :d);
+    rmtree $cwd.IO.child('.precomp');
+    rmtree $cwd.IO.child('lib/.precomp');
 
     True
 }
